--- a/templates/cms_page/cmsbase.html
+++ b/templates/cms_page/cmsbase.html
@@ -38,8 +38,7 @@
     <!-- Sidebar Container -->
     <div class="flex">
         <!-- Sidebar -->
-        <div
-            class="bg-white text-gray-900 w-60 h-screen fixed top-0 left-0 flex flex-col justify-between shadow-lg">
+        <div class="bg-white text-gray-900 w-60 h-screen fixed top-0 left-0 flex flex-col justify-between shadow-lg">
             <div class="p-6">
                 <h2 class="text-xl font-semibold text-blue-800">Admin CMS</h2>
                 <ul class="mt-8 space-y-4">
@@ -73,7 +72,7 @@
                             <span>Pengguna</span>
                         </a>
                     </li>
-                     
+
 
                     <li>
                         <a href="{{url_for('main.list_rute')}}"
@@ -105,7 +104,7 @@
                         </a>
                     </li>
                     <!-- Logout Menu Item -->
-                   
+
                 </ul>
             </div>
             <!-- Bawah: Logout -->
