--- a/templates/cms_page/pengguna/user.html
+++ b/templates/cms_page/pengguna/user.html
@@ -29,6 +29,8 @@
             <th class="px-6 py-4 text-left">ID</th>
             <th class="px-6 py-4 text-left">Nama</th>
             <th class="px-6 py-4 text-left">Email</th>
+            <th class="px-6 py-4 text-left">No. HP</th>
+            <th class="px-6 py-4 text-left">Alamat</th>
             <th class="px-6 py-4 text-center">Aksi</th>
           </tr>
         </thead>
@@ -38,6 +40,8 @@
             <td class="px-6 py-4 text-sm">{{ user._id }}</td>
             <td class="px-6 py-4 text-sm font-medium">{{ user.username }}</td>
             <td class="px-6 py-4 text-sm">{{ user.email }}</td>
+            <td class="px-6 py-4 text-sm">{{ user.no_hp or '-' }}</td>
+            <td class="px-6 py-4 text-sm">{{ user.alamat or '-' }}</td>
             <td class="px-6 py-4 text-center relative">
               <div class="inline-block text-left">
                 <button onclick="toggleDropdown(this)" class="focus:outline-none">
@@ -45,7 +49,7 @@
                     class="w-3 h-3 cursor-pointer hover:opacity-80" />
                 </button>
                 <div
-                  class="hidden origin-top-right absolute right-0 mt-2 w-28 rounded-md shadow-lg bg-white ring-1 ring-black ring-opacity-5 z-10">
+                  class="hidden origin-top-right absolute right-0 mt-2 w-28 rounded-md shadow-lg bg-white ring-1 ring-black ring-opacity-5 z-10 dropdown-menu">
                   <div class="py-1 text-sm text-gray-700">
                     <a href="{{ url_for('main.edit_pengguna', user_id=user._id) }}"
                       class="block px-4 py-2 hover:bg-gray-100">Edit</a>
@@ -56,16 +60,16 @@
                 </div>
               </div>
             </td>
-
           </tr>
           {% endfor %}
 
           {% if users|length == 0 %}
           <tr>
-            <td colspan="4" class="px-6 py-6 text-center text-gray-500 text-sm">Belum ada pengguna.</td>
+            <td colspan="6" class="px-6 py-6 text-center text-gray-500 text-sm">Belum ada pengguna.</td>
           </tr>
           {% endif %}
         </tbody>
+
       </table>
     </div>
 
