--- a/templates/cms_page/rute/edit_rute.html
+++ b/templates/cms_page/rute/edit_rute.html
@@ -57,10 +57,19 @@
         <!-- Tanggal -->
         <div>
             <label for="tanggal" class="block mb-1 font-medium text-gray-700">Tanggal</label>
-            <input type="text" name="tanggal" id="tanggal" required
+            <input type="date" name="tanggal" id="tanggal" required
                 class="w-full border border-gray-300 px-4 py-2 rounded-md focus:ring-2 focus:ring-blue-500 focus:outline-none"
                 value="{{ rute_data.tanggal }}">
         </div>
+
+        <!-- Jam -->
+        <div>
+            <label for="jam" class="block mb-1 font-medium text-gray-700">Jam</label>
+            <input type="time" name="jam" id="jam" required
+                class="w-full border border-gray-300 px-4 py-2 rounded-md focus:ring-2 focus:ring-blue-500 focus:outline-none"
+                value="{{ rute_data.jam }}">
+        </div>
+
 
         <!-- Kedatangan -->
         <div class="mb-4">
