--- a/templates/cms_page/rute/tambah_rute.html
+++ b/templates/cms_page/rute/tambah_rute.html
@@ -54,10 +54,17 @@
         <!-- Tanggal -->
         <div>
             <label for="tanggal" class="block mb-1 font-medium text-gray-700">Tanggal</label>
-            <input type="text" name="tanggal" id="tanggal" required
-                class="w-full border border-gray-300 px-4 py-2 rounded-md focus:ring-2 focus:ring-blue-500 focus:outline-none"
-                placeholder="Contoh: 2 Juni">
+            <input type="date" name="tanggal" id="tanggal" required value="{{ today }}"
+                class="w-full border border-gray-300 px-4 py-2 rounded-md focus:ring-2 focus:ring-blue-500 focus:outline-none">
         </div>
+
+        <!-- Jam -->
+        <div>
+            <label for="jam" class="block mb-1 font-medium text-gray-700">Jam</label>
+            <input type="time" name="jam" id="jam" required
+                class="w-full border border-gray-300 px-4 py-2 rounded-md focus:ring-2 focus:ring-blue-500 focus:outline-none">
+        </div>
+
 
         <!-- Jumlah Penumpang -->
         <div>
