tracking & devices history done

--- a/templates/base.html
+++ b/templates/base.html
@@ -70,6 +70,8 @@
                         class="hidden md:absolute md:top-full md:left-0 mt-2 md:w-40 bg-white rounded-xl shadow-lg py-2 z-30 flex flex-col">
                         <a href="#testi"
                             class="block px-4 py-2 text-gray-700 hover:bg-blue-50 hover:text-blue-600 transition">Testimoni</a>
+                        <a href="#artikel"
+                            class="block px-4 py-2 text-gray-700 hover:bg-blue-50 hover:text-blue-600 transition">Artikel</a>
                         <a href="#tutorial"
                             class="block px-4 py-2 text-gray-700 hover:bg-blue-50 hover:text-blue-600 transition">Tutorial</a>
                     </div>
