--- a/templates/cms_page/cmsbase.html
+++ b/templates/cms_page/cmsbase.html
@@ -80,7 +80,7 @@
                             <!-- Icon -->
                             <img src="{{ url_for('static', filename='image/rute.svg') }}" alt="Dashboard Icon"
                                 class="w-4 h-4 object-contain group-hover:brightness-110 transition" />
-                            <span>Rute</span>
+                            <span>Operasional</span>
                         </a>
                     </li>
 
