--- a/templates/cms_page/pengguna/user.html
+++ b/templates/cms_page/pengguna/user.html
@@ -26,18 +26,19 @@
       <table class="min-w-full table-auto border-collapse">
         <thead class="bg-blue-100 text-gray-700 text-sm uppercase">
           <tr>
-            <th class="px-6 py-4 text-left">ID</th>
+            <th class="px-6 py-4 text-left">No</th>
             <th class="px-6 py-4 text-left">Nama</th>
             <th class="px-6 py-4 text-left">Email</th>
             <th class="px-6 py-4 text-left">No. HP</th>
             <th class="px-6 py-4 text-left">Alamat</th>
+            <th class="px-6 py-4 text-left">Status</th>
             <th class="px-6 py-4 text-center">Aksi</th>
           </tr>
         </thead>
         <tbody class="text-gray-700">
           {% for user in users %}
           <tr class="border-b hover:bg-gray-50 transition">
-            <td class="px-6 py-4 text-sm">{{ user._id }}</td>
+            <td class="px-6 py-4 text-sm">{{ loop.index }}</td>
             <td class="px-6 py-4 text-sm font-medium">{{ user.username }}</td>
             <td class="px-6 py-4 text-sm">{{ user.email }}</td>
             <td class="px-6 py-4 text-sm">{{ user.no_hp or '-' }}</td>
