--- a/templates/cms_page/armada/armada.html
+++ b/templates/cms_page/armada/armada.html
@@ -1,6 +1,6 @@
 {% extends 'cms_page/cmsbase.html' %}
 
-{% block title %}Busty | Armada{% endblock %}
+{% block title %}Travion | Armada{% endblock %}
 {% block page_title %}Armada{% endblock %}
 
 {% block content %}
