--- a/templates/cms_page/artikel/artikel.html
+++ b/templates/cms_page/artikel/artikel.html
@@ -1,7 +1,7 @@
 <!-- templates/cms/dashboard.html -->
 {% extends 'cms_page/cmsbase.html' %}
 
-{% block title %}Busty | Artikel{% endblock %}
+{% block title %}Travion | Artikel{% endblock %}
 {% block page_title %}Artikel{% endblock %}
 
 {% block content %}
