--- a/templates/cms_page/artikel/edit_artikel.html
+++ b/templates/cms_page/artikel/edit_artikel.html
@@ -1,6 +1,6 @@
 {% extends 'cms_page/cmsbase.html' %}
 
-{% block title %}Busty | Edit Artikel{% endblock %}
+{% block title %}Travion | Edit Artikel{% endblock %}
 {% block page_title %}Edit Artikel{% endblock %}
 
 {% block content %}
