--- a/templates/cms_page/dashboard.html
+++ b/templates/cms_page/dashboard.html
@@ -1,7 +1,7 @@
 <!-- templates/cms/dashboard.html -->
 {% extends 'cms_page/cmsbase.html' %}
 
-{% block title %}Busty | Dashboard{% endblock %}
+{% block title %}Travion | Dashboard{% endblock %}
 {% block page_title %}Dashboard{% endblock %}
 
 {% block content %}
