--- a/templates/cms_page/pengguna/edit_pengguna.html
+++ b/templates/cms_page/pengguna/edit_pengguna.html
@@ -1,6 +1,6 @@
 {% extends 'cms_page/cmsbase.html' %}
 
-{% block title %}Edit Pengguna | Busty{% endblock %}
+{% block title %}Travion | Edit Pengguna{% endblock %}
 {% block page_title %}Edit Data Pengguna{% endblock %}
 
 {% block content %}
