--- a/templates/cms_page/pengguna/user.html
+++ b/templates/cms_page/pengguna/user.html
@@ -1,6 +1,6 @@
 {% extends 'cms_page/cmsbase.html' %}
 
-{% block title %}Busty | Pengguna{% endblock %}
+{% block title %}Travion | Pengguna{% endblock %}
 {% block page_title %}Manajemen Pengguna{% endblock %}
 
 {% block content %}
