--- a/templates/cms_page/rute/edit_rute.html
+++ b/templates/cms_page/rute/edit_rute.html
@@ -1,6 +1,6 @@
 {% extends 'cms_page/cmsbase.html' %}
 
-{% block title %}Edit Rute Operasional{% endblock %}
+{% block title %}Travion | Edit Operasional{% endblock %}
 {% block page_title %}Edit Rute Operasional{% endblock %}
 
 {% block content %}
