--- a/templates/cms_page/rute/rute.html
+++ b/templates/cms_page/rute/rute.html
@@ -1,6 +1,6 @@
 {% extends 'cms_page/cmsbase.html' %}
 
-{% block title %}Busty | Operasional{% endblock %}
+{% block title %}Travion | Operasional{% endblock %}
 {% block page_title %}Operasional{% endblock %}
 
 {% block content %}
