--- a/templates/cms_page/rute/tambah_rute.html
+++ b/templates/cms_page/rute/tambah_rute.html
@@ -1,6 +1,6 @@
 {% extends 'cms_page/cmsbase.html' %}
 
-{% block title %}Tambah Rute Operasional{% endblock %}
+{% block title %}Travion | Tambah Operasional{% endblock %}
 {% block page_title %}Tambah Rute Operasional{% endblock %}
 
 {% block content %}
