--- a/templates/cms_page/rute/tracking.html
+++ b/templates/cms_page/rute/tracking.html
@@ -1,6 +1,6 @@
 {% extends 'cms_page/cmsbase.html' %}
 
-{% block title %}Busty | Tracking{% endblock %}
+{% block title %}Travion | Tracking{% endblock %}
 {% block page_title %}Tracking Lokasi{% endblock %}
 
 {% block content %}
