--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>{% block title %}Busty | Login{% endblock %}</title>
+  <title>{% block title %}Travion | Login{% endblock %}</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="icon" href="{{ url_for('static', filename='image/busty.png') }}" type="image/png">
+  <link rel="icon" href="{{ url_for('static', filename='image/Travion_pt.svg') }}" type="image/png">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 
