--- a/templates/cms_page/armada/edit_armada.html
+++ b/templates/cms_page/armada/edit_armada.html
@@ -1,6 +1,6 @@
 {% extends 'cms_page/cmsbase.html' %}
 
-{% block title %}Busty | Edit Armada{% endblock %}
+{% block title %}Travion | Edit Armada{% endblock %}
 {% block page_title %}Edit Armada{% endblock %}
 
 {% block content %}
