--- a/templates/cms_page/artikel/tambah_artikel.html
+++ b/templates/cms_page/artikel/tambah_artikel.html
@@ -1,6 +1,6 @@
 {% extends 'cms_page/cmsbase.html' %}
 
-{% block title %}Tambah Armada{% endblock %}
+{% block title %}Travion | Tambah Armada{% endblock %}
 {% block page_title %}Tambah Armada Bus{% endblock %}
 
 {% block content %}
