--- a/templates/cms_page/cmsbase.html
+++ b/templates/cms_page/cmsbase.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Dashboard CMS{% endblock %}</title>
-    <link rel="icon" href="{{ url_for('static', filename='image/busty.png') }}" type="image/png">
+    <link rel="icon" href="{{ url_for('static', filename='image/Travion_pt.svg') }}" type="image/png">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700&display=swap"
