--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Welcome to Busty{% endblock %}
+{% block title %}Travion | Travel Vision{% endblock %}
 
 {% block content %}
 
