--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,7 @@
     <header class="bg-white shadow-md fixed w-full z-10 top-0 px-4 md:px-10 text-sm">
         <div class="container mx-auto px-0 py-4 flex justify-between items-center">
             <a href="/">
-                <img src="/static/image/Logo LS.png" alt="Logo" class="h-6 w-auto">
+                <img src="/static/image/Travion_ls.svg" alt="Logo" class="h-6 w-auto">
             </a>
 
             <!-- Hamburger button (hidden on md+) -->
@@ -92,7 +92,7 @@
     </div>
 
     <footer class="bg-white mt-20 py-4 text-center text-sm text-gray-500">
-        &copy; 2025 Busty. All rights reserved.
+        &copy; 2025 Travion. All rights reserved.
     </footer>
 </body>
 
