--- a/templates/cms_page/artikel/tambah_artikel.html
+++ b/templates/cms_page/artikel/tambah_artikel.html
@@ -10,9 +10,10 @@
     <form method="POST" action="{{ url_for('main.tambah_artikel') }}" enctype="multipart/form-data" class="space-y-5">
 
         <div>
-            <label for="gambar" class="block mb-1 font-medium text-gray-700">Upload Gambar</label>
-            <input type="file" name="gambar" id="gambar"
-                class="w-full border border-gray-300 px-4 py-2 rounded-md focus:ring-2 focus:ring-blue-500 focus:outline-none file:bg-gray-100 file:border file:mr-4 file:py-2 file:px-4 file:rounded file:text-sm file:font-semibold file:text-gray-700">
+            <label for="gambar_url" class="block mb-1 font-medium text-gray-700">URL Gambar</label>
+            <input type="url" name="gambar_url" id="gambar_url" required
+                class="w-full border border-gray-300 px-4 py-2 rounded-md focus:ring-2 focus:ring-blue-500 focus:outline-none"
+                placeholder="Contoh: https://p1-image.cdn-aihelp.net/FileService/UserFile/...jpg">
         </div>
         <!-- judul -->
         <div>
